Stop text from overflowing in partfour callaction
text left the div, min-height prevents that,
still no margin/padding around the text

--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ body {
 }
 
 .header {
-    padding: 15px 0px 25px;
+    padding: 15px 10px 25px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -200,6 +200,7 @@ body {
 }
 
 .signup-left {
+    max-height: 80px;
 
 }
 
